Обновлены зависимости и добавлены реализации репозиториев для аутентификации и работы с медиафайлами. Включены новые модели и улучшена структура проекта. Добавлены конфигурации для CocoaPods и обновлены файлы проекта для поддержки новых функций.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,9 +46,9 @@ dependencies:
   equatable: ^2.0.5
   
   # Хранение данных
-  sqflite: ^2.3.2
-  path: ^1.9.0
-  path_provider: ^2.1.2
+  sqflite: ^2.4.2
+  path: ^1.9.1
+  path_provider: ^2.1.5
   shared_preferences: ^2.2.3
   
   # Шифрование
@@ -56,7 +56,7 @@ dependencies:
   encrypt: ^5.0.3
   
   # Доступ к медиа и функциям устройства
-  image_picker: ^1.0.7
+  image_picker: ^1.1.2
   file_picker: ^6.2.0
   permission_handler: ^11.3.0
   local_auth: ^2.1.9
@@ -64,8 +64,10 @@ dependencies:
   
   # Утилиты
   intl: ^0.19.0
-  uuid: ^4.3.3
+  uuid: ^4.5.1
   logger: ^2.0.2+1
+  flutter_secure_storage: ^9.2.4
+  crypto: ^3.0.6
   
 
 dev_dependencies:
