Добавлены разрешения для работы с медиафайлами на Android и iOS, улучшена обработка запросов разрешений. Реализован нотифаер для управления состоянием медиафайлов и добавлен диалог для импорта медиафайлов. Обновлены страницы для отображения и импорта медиафайлов.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Разрешения для Android 13+ (API 33+) -->
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
+    
+    <!-- Разрешения для Android < 13 -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" 
+                     android:maxSdkVersion="32" />
+    
+    <!-- Разрешения для камеры -->
+    <uses-permission android:name="android.permission.CAMERA" />
+    
     <application
         android:label="ios_chipher_app"
         android:name="${applicationName}"
