--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -24,6 +24,16 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Разрешите доступ к галерее для импорта фото и видео файлов, которые будут зашифрованы в приложении.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Разрешите доступ для сохранения расшифрованных файлов в вашу галерею.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Для импорта фото и видео непосредственно с камеры.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Требуется для записи видео со звуком.</string>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Для защиты вашего зашифрованного контента с помощью биометрической аутентификации.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
