--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,6 +94,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  # Настройки для локализации
+  generate: true
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
